fix: dark mode fixes, gulp concat css, verbiage updates for error logs

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -30,7 +30,7 @@ body {
     margin: 0 -0.4em;
     padding: 0.1em 0.4em;
     border-radius: 0.8em 0.3em;
-    background: transparent !important;
+    background: transparent;
     background-image: linear-gradient(
       to right,
       rgba(255, 225, 0, 0.1),
